--- a/userguide/csaw.Rnw
+++ b/userguide/csaw.Rnw
@@ -201,7 +201,7 @@ param <- readParam(minq=50)
 data <- windowCounts(bam.files, ext=frag.len, width=win.width, param=param)
 @
 
-The function returns a \code{SummarizedExperiment} object where the matrix of counts is stored as the first entry in the \code{assays} slot.
+The function returns a \code{RangedSummarizedExperiment} object where the matrix of counts is stored as the first entry in the \code{assays} slot.
 Each row corresponds to a genomic window while each column corresponds to a library.
 The coordinates of each window are stored in the \code{rowRanges}.
 The total number of reads in each library is stored as \code{totals} in the \code{colData}.
@@ -452,7 +452,7 @@ Any file manipulations that might break the synchronisation should be corrected 
 Observant readers may notice that \code{ext} was specified in the above call to \code{windowCounts}.
 This is not strictly necessary for paired-end data, where the fragment length is explicitly calculated for each proper pair.
 However, it is recommended to set \code{ext} to the median fragment length across all pairs in each library - in this case, around 250 bp.
-This ensures consistency with some downstream functions, which assume that the \code{ext} field of the returned \code{SummarizedExperiment} holds the average fragment length.
+This ensures consistency with some downstream functions, which assume that the \code{ext} field of the returned \code{RangedSummarizedExperiment} holds the average fragment length.
 Specification of \code{ext} is also necessary if fragments are to be coerced to the same length, as described in Section~\ref{sec:coercelen}.
 
 \subsection{Handling low-quality paired-end data}
@@ -569,7 +569,7 @@ For example, libraries with larger fragment lengths will have wider peaks.
 The single-end reads in those peaks will then require more extension, in order to impute a fragment interval that covers the binding site.
 This is done by supplying a vector to the \code{ext} argument.
 Each entry specifies the average fragment length to be used for the corresponding library.
-The extension lengths are also stored in the \code{SummarizedExperiment} output for future reference. 
+The extension lengths are also stored in the \code{RangedSummarizedExperiment} output for future reference. 
 
 <<>>=
 multi.frag.lens <- c(100, 150, 200, 250)
@@ -1814,8 +1814,8 @@ gc()
 \begin{combox}
 This is where we bring it all together.
 We'll need the \code{merged} list and the \code{tabcom} table from the previous chapter. 
-There's a bit about visualization at the end where we need the \code{y} object from Chapter~\ref{chap:stats} and the \code{bam.files} that we started off with.
 Oh, and the \code{org.Mm.eg.db} object that we loaded in Chapter~\ref{chap:filter}.
+There's a bit about visualization at the end where we need the \code{data} and \code{param} objects from Chapter~\ref{chap:count}, along with the \code{bam.files} that we started off with.
 \end{combox}
 
 \section{Adding gene-based annotation}
@@ -1917,7 +1917,7 @@ This ensures that the same reads used in the analysis will be pulled out during 
 
 <<>>=
 cur.region <- GRanges("chr18", IRanges(77806807, 77807165))
-extractReads(cur.region, bam.files[1], param=param)
+extractReads(bam.files[1], cur.region, param=param)
 @
 
 Here, coverage is visualized as the number of reads covering each base pair in the interval of interest.
@@ -1931,7 +1931,7 @@ For paired-end data, coverage can be similarly plotted for fragments, i.e., prop
 require(Gviz)
 collected <- list()
 for (i in 1:length(bam.files)) { 
-    reads <- extractReads(cur.region, bam.files[i], param=param)
+    reads <- extractReads(bam.files[i], cur.region, param=param)
     pcov <- as(coverage(reads[strand(reads)=="+"])/data$totals[i]*1e6, "GRanges")
     ncov <- as(coverage(reads[strand(reads)=="-"])/data$totals[i]*1e6, "GRanges")
     ptrack <- DataTrack(pcov, type="histogram", lwd=0, fill=rgb(0,0,1,.4), ylim=c(0,1.1), 
